--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 .container-fluid {
@@ -82,6 +83,25 @@
 .time-label {
     font-size: 1rem;
     color: #6c757d;
+}
+
+@keyframes pulsar {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    50% {
+        transform: scale(1.1);
+        opacity: 0.8;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+.btn-pulsar {
+    animation: pulsar 2s infinite;
 }
 
 /* Responsividade */
