style: finally section depoiments

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,16 @@
     width: 100%;
 }
 
+.testimonial-content {
+    max-width: 300px;
+    margin: 0 auto;
+}
+.testimonial-content img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
+
 #countdownSection {
     background-color: #f8f9fa;
     border-radius: 8px;
